--- a/exer02.html
+++ b/exer02.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ESTADOS BRASILEIROS</title>
-    <link rel="stylesheet" href="CSS/ESTILO.CSS">
+    <link rel="stylesheet" href="CSS/exer02.CSS">
 </head>
 
 <body>
